@@ -16,46 +16,16 @@
    </modules>
 
    <properties>
-      <alfresco.client.contextPath>/alfresco</alfresco.client.contextPath>
-      <alfresco.data.location>${session.executionRootDirectory}/alf_data_dev</alfresco.data.location>
-      <alfresco.db.datasource.class>org.gjt.mm.mysql.Driver</alfresco.db.datasource.class>
-      <alfresco.db.name>alf_dev</alfresco.db.name>
-      <alfresco.db.params>AUTO_SERVER=TRUE;DB_CLOSE_ON_EXIT=FALSE;LOCK_TIMEOUT=10000;MVCC=FALSE;LOCK_MODE=0;IGNORECASE=TRUE</alfresco.db.params>
-      <alfresco.db.password>alfresco</alfresco.db.password>
-      <alfresco.db.url>jdbc:mysql://${alfresco.db.host}:${alfresco.db.port}/${alfresco.db.name}</alfresco.db.url>
-      <alfresco.db.username>alfresco</alfresco.db.username>
-      <alfresco-spring-webscripts.version>8.15</alfresco-spring-webscripts.version>
-      <api.explorer.version>7.0.0</api.explorer.version>
-
-      <alfresco.min.version>7.0.0</alfresco.min.version>
-
-      <activemq.port1>61616</activemq.port1>
-      <activemq.port2>5672</activemq.port2>
-      <camel.mock.version>3.7.0</camel.mock.version>
-      <share.client.contextPath>/share</share.client.contextPath>
-
-      <maven.javadoc.version>3.1.0</maven.javadoc.version>
       <maven.javadoc.skip>true</maven.javadoc.skip>
-      <maven.war.plugin.version>3.2.2</maven.war.plugin.version>
-      <maven.alfresco.includeDependencies>false</maven.alfresco.includeDependencies>
-      <java.version>11</java.version>
-      <maven.compiler.source>${java.version}</maven.compiler.source>
-      <maven.compiler.target>${java.version}</maven.compiler.target>
-      <testJavaVersion>${java.version}</testJavaVersion>
+
       <maven.buildhelper.version>1.9.1</maven.buildhelper.version>
       <maven.compiler.version>3.8.0</maven.compiler.version>
       <maven.enforcer.plugin>3.0.0-M2</maven.enforcer.plugin>
       <maven.resources.version>3.1.0</maven.resources.version>
       <maven.tomcat.port>8080</maven.tomcat.port>
 
-      <jackson.version>2.12.1</jackson.version>
-      <jackson-databind.version>2.12.1</jackson-databind.version>
-      <fabric8.docker.version>0.34.1</fabric8.docker.version>
-      <mockito.version>1.10.19</mockito.version>
-
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-      <argLine>-Xmx1024m -XX:MaxPermSize=256m -Duser.language=en -Dcom.sun.management.jmxremote</argLine>
 
       <license.update.dryrun>true</license.update.dryrun>
       <license.verbose>false</license.verbose>
@@ -64,80 +34,39 @@
       <app.amp.folder>src/main/amp</app.amp.folder>
       <app.amp.output.folder>../${project.build.finalName}</app.amp.output.folder>
       <app.filtering.enabled>true</app.filtering.enabled>
-      <app.log.dir>${project.build.directory}/</app.log.dir>
-      <app.log.root.level>WARN</app.log.root.level>
       <app.properties.include>**</app.properties.include>
       <app.properties.folder>src/main/properties/local</app.properties.folder>
       <app.properties.test.include>**</app.properties.test.include>
       <app.properties.test.folder>src/test/properties/local</app.properties.test.folder>
-
-      <javax-jaxb.version>2.4.0-b180830.0359</javax-jaxb.version>
-      <javax-jaxb-impl.version>3.0.0-M4</javax-jaxb-impl.version>
-      <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
-      <apache-compress.version>1.19</apache-compress.version>
    </properties>
 
-   <dependencyManagement>
-      <dependencies>
-         <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
-            <version>${mockito.version}</version>
-         </dependency>
-         <dependency>
-            <groupId>org.alfresco.surf</groupId>
-            <artifactId>spring-webscripts</artifactId>
-            <version>${alfresco-spring-webscripts.version}</version>
-            <classifier>tests</classifier>
-         </dependency>
-         <dependency>
-            <groupId>postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>${alfresco.postgres.version}</version>
-         </dependency>
-         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>${dependency.mysql.version}</version>
-         </dependency>
-      </dependencies>
-   </dependencyManagement>
-
    <dependencies>
-      <dependency>
-         <groupId>junit</groupId>
-         <artifactId>junit</artifactId>
-         <version>4.13.2</version>
-         <scope>test</scope>
-      </dependency>
       <!-- XML jars removed in Java 11 but are provided by alfresco-content-services -->
       <dependency>
-         <groupId>javax.xml.bind</groupId>
-         <artifactId>jaxb-api</artifactId>
-         <version>${javax-jaxb.version}</version>
+         <groupId>jakarta.jws</groupId>
+         <artifactId>jakarta.jws-api</artifactId>
          <scope>provided</scope>
       </dependency>
 
-      <dependency>
-         <groupId>org.apache.camel</groupId>
-         <artifactId>camel-mock</artifactId>
-         <version>${camel.mock.version}</version>
-         <scope>test</scope>
-      </dependency>
+<!--      <dependency>-->
+<!--         <groupId>javax.xml.bind</groupId>-->
+<!--         <artifactId>jaxb-api</artifactId>-->
+<!--         <version>${javax-jaxb.version}</version>-->
+<!--         <scope>provided</scope>-->
+<!--      </dependency>-->
 
-      <dependency>
-         <groupId>com.sun.xml.bind</groupId>
-         <artifactId>jaxb-impl</artifactId>
-         <version>${javax-jaxb-impl.version}</version>
-         <scope>provided</scope>
-      </dependency>
+<!--      <dependency>-->
+<!--         <groupId>com.sun.xml.bind</groupId>-->
+<!--         <artifactId>jaxb-impl</artifactId>-->
+<!--         <scope>provided</scope>-->
+<!--      </dependency>-->
 
-      <dependency>
-         <groupId>org.apache.bcel</groupId>
-         <artifactId>bcel</artifactId>
-         <version>6.2.99</version>
-         <scope>provided</scope>
-      </dependency>
+<!--      <dependency>-->
+<!--         <groupId>org.apache.bcel</groupId>-->
+<!--         <artifactId>bcel</artifactId>-->
+<!--         <version>6.2.99</version>-->
+<!--         <scope>provided</scope>-->
+<!--      </dependency>-->
    </dependencies>
 
    <build>
@@ -178,7 +107,7 @@
                      <regexPropertySettings>
                         <regexPropertySetting>
                            <name>ags.module.repo.version.min</name>
-                           <value>${alfresco.min.version}</value>
+                           <value>${amp.min.version}</value>
                            <regex>(\d+)\.(\d+).*</regex>
                            <replacement>$1.$2</replacement>
                            <failIfNoMatch>false</failIfNoMatch>
@@ -221,7 +150,6 @@
          </plugin>
          <plugin>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>${maven.javadoc.version}</version>
             <configuration>
                <doclint>none</doclint>
             </configuration>
@@ -252,7 +180,6 @@
          </plugin>
          <plugin>
             <artifactId>maven-install-plugin</artifactId>
-            <version>2.5.2</version>
             <executions>
                <execution>
                   <id>default-install</id>
@@ -286,14 +213,6 @@
                   <goals>
                      <goal>site</goal>
                   </goals>
-                  <configuration>
-                     <reportPlugins>
-                        <reportPlugin>
-                           <groupId>org.apache.maven.plugins</groupId>
-                           <artifactId>maven-project-info-reports-plugin</artifactId>
-                        </reportPlugin>
-                     </reportPlugins>
-                  </configuration>
                </execution>
                <execution>
                   <id>default-deploy</id>
@@ -301,24 +220,8 @@
                   <goals>
                      <goal>deploy</goal>
                   </goals>
-                  <configuration>
-                     <reportPlugins>
-                        <reportPlugin>
-                           <groupId>org.apache.maven.plugins</groupId>
-                           <artifactId>maven-project-info-reports-plugin</artifactId>
-                        </reportPlugin>
-                     </reportPlugins>
-                  </configuration>
                </execution>
             </executions>
-            <configuration>
-               <reportPlugins>
-                  <reportPlugin>
-                     <groupId>org.apache.maven.plugins</groupId>
-                     <artifactId>maven-project-info-reports-plugin</artifactId>
-                  </reportPlugin>
-               </reportPlugins>
-            </configuration>
          </plugin>
       </plugins>
       <extensions>
@@ -354,36 +257,6 @@
       <pluginManagement>
          <plugins>
             <plugin>
-               <artifactId>maven-surefire-plugin</artifactId>
-               <version>2.22.1</version>
-               <configuration>
-                  <argLine>
-                     --illegal-access=permit
-                  </argLine>
-               </configuration>
-            </plugin>
-            <plugin>
-               <artifactId>maven-install-plugin</artifactId>
-               <version>2.5.2</version>
-            </plugin>
-            <plugin>
-               <artifactId>maven-jar-plugin</artifactId>
-               <version>3.1.0</version>
-            </plugin>
-            <plugin>
-               <artifactId>maven-assembly-plugin</artifactId>
-               <version>3.1.0</version>
-            </plugin>
-            <plugin>
-               <groupId>org.alfresco.maven.plugin</groupId>
-               <artifactId>alfresco-maven-plugin</artifactId>
-               <version>2.1.1</version>
-               <extensions>true</extensions>
-               <configuration>
-                  <snapshotToTimestamp>true</snapshotToTimestamp>
-               </configuration>
-            </plugin>
-            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
@@ -398,8 +271,8 @@
                         <goal>testCompile</goal>
                      </goals>
                      <configuration>
-                        <source>${testJavaVersion}</source>
-                        <target>${testJavaVersion}</target>
+                        <source>${java.version}</source>
+                        <target>${java.version}</target>
                      </configuration>
                   </execution>
                </executions>
@@ -593,18 +466,17 @@
             </plugin>
             <plugin>
                <artifactId>maven-war-plugin</artifactId>
-               <version>${maven.war.plugin.version}</version>
                <dependencies>
                   <!-- Needed when creating the community and enterprise rest api wars  -->
                   <dependency>
                      <groupId>org.apache.commons</groupId>
                      <artifactId>commons-compress</artifactId>
-                     <version>${apache-compress.version}</version>
+                     <version>${dependency.apache-compress.version}</version>
                   </dependency>
                   <dependency>
                      <groupId>org.alfresco.maven.plugin</groupId>
                      <artifactId>alfresco-maven-plugin</artifactId>
-                     <version>2.1.1</version>
+                     <version>${alfresco.maven-plugin.version}</version>
                   </dependency>
                </dependencies>
                <configuration>
@@ -672,6 +544,15 @@
       </pluginManagement>
    </build>
 
+   <reporting>
+      <plugins>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-project-info-reports-plugin</artifactId>
+         </plugin>
+      </plugins>
+   </reporting>
+
    <profiles>
       <!-- Generate the Javadoc for Public API only (filtered on AlfrescoPublicApi annotation) -->
       <profile>
@@ -719,7 +600,6 @@
 
                <plugin>
                   <artifactId>maven-javadoc-plugin</artifactId>
-                  <version>${maven.javadoc.version}</version>
                   <configuration>
                      <doclet>com.docflex.javadoc.Doclet</doclet>
                      <docletPath>${project.build.directory}/docflex-javadoc-${docflex.version}/lib/docflex-javadoc.jar</docletPath>
